# moral_harvest

./: .gitignore  README.md  pyproject.toml
moral_harvest/: __init__.py
moral_harvest/analysis/: __init__.py  plot_training_curves.py
moral_harvest/callbacks/: __init__.py  metrics.py
moral_harvest/cli/: __init__.py  rollout_multi_agent.py  rollout_single_agent.py  train.py
moral_harvest/envs/: __init__.py  meltingpot_env.py  meltingpot_multiagent_env.py  registry.py  reward_shaping_env.py
moral_harvest/experiments/: __init__.py  multi_agent_selfish_cleanrl.py  multi_agent_selfish_rllib.py  reward_shaped_shared.py  single_agent_cleanrl.py  single_agent_ppo.py  single_agent_ppo_cleanrl.py  single_agent_ppo_rllib.py
moral_harvest/rewards/: __init__.py  gini.py  shaping.py
moral_harvest/training/: __init__.py  cnn_actor_critic.py  config.py  env_metrics.py  policies.py  results_logger.py
results/single_agent/cleanrl/cleanrl_20260314_170702/: metrics.csv  metrics.jsonl
results/single_agent/cleanrl/cleanrl_artifact_smoke/: metrics.csv  metrics.jsonl
results/single_agent/cleanrl/cleanrl_device_smoke/: metrics.csv  metrics.jsonl
results/single_agent/cleanrl/log_smoke_cleanrl/: metrics.csv  metrics.jsonl
results/single_agent/rllib/rllib_20260314_162146/: metrics.csv  metrics.jsonl
results/single_agent/rllib/rllib_20260314_170033/: metrics.csv  metrics.jsonl
scripts/: deontological.sh  reward_types_base_perf.sh  selfish_ma.sh  utilitarian.sh  virtue.sh
tests/: test_reward_shaping.py
