[project]
name = "moral-harvest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <=3.12"
dependencies = [
    "ray[rllib]>=2.9.0",
    "torchvision>=0.23.0",
    "torchaudio==2.8.0",
    "chex==0.1.89",
    "jax==0.6.0",
    "jaxlib==0.6.0",
    "dm-env>=1.6",
    "dm-tree>=0.1.9",
    "numpy>=2.4.3",
    "dm_meltingpot",
    "gymnasium",
    "matplotlib",
    "ml_collections",
    "numpy",
    "pettingzoo==1.25.0",
    "supersuit==3.10.0",
    "torch",
    "shimmy",
    "wandb",
    "moviepy",
    "tqdm>=4.67.0",
    "pytest>=9.0.2",
]

[tool.uv]
override-dependencies = [
  "pygame>=2.5.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
